// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 1`] = `"fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "url-fake-hostname",
  "hostname": "url-fake-hostname",
  "href": "fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents",
  "origin": "null",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "/api/v5/repos/xxxx/xxxx/contents",
  "origin": "null",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 4`] = `
{
  "protocol": "fake+http:",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 7`] = `
{
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 9`] = `
{
  "host": "url-fake-hostname",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 10`] = `
{
  "port": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 11`] = `
{
  "hostname": "url-fake-hostname",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', '/api/v5/' ] 14`] = `
{
  "href": "fake+http://url-fake-hostname/api/v5/repos/xxxx/xxxx/contents",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 1`] = `"https://gitee.com/api/v5/repos/xxxx/xxxx/contents"`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "gitee.com",
  "hostname": "gitee.com",
  "href": "https://gitee.com/api/v5/repos/xxxx/xxxx/contents",
  "origin": "https://gitee.com",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "https:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "gitee.com",
  "hostname": "gitee.com",
  "href": "https://gitee.com/api/v5/repos/xxxx/xxxx/contents",
  "origin": "https://gitee.com",
  "password": "",
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
  "port": "",
  "protocol": "https:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 4`] = `
{
  "protocol": "https:",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 7`] = `
{
  "pathname": "/api/v5/repos/xxxx/xxxx/contents",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 9`] = `
{
  "host": "gitee.com",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 10`] = `
{
  "port": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 11`] = `
{
  "hostname": "gitee.com",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ '/api/v5/repos/xxxx/xxxx/contents', 'https://gitee.com/api/v5/' ] 14`] = `
{
  "href": "https://gitee.com/api/v5/repos/xxxx/xxxx/contents",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 1`] = `"fake+http://url-fake-hostname/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "url-fake-hostname",
  "hostname": "url-fake-hostname",
  "href": "fake+http://url-fake-hostname/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 4`] = `
{
  "protocol": "fake+http:",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 7`] = `
{
  "pathname": "/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 9`] = `
{
  "host": "url-fake-hostname",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 10`] = `
{
  "port": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 11`] = `
{
  "hostname": "url-fake-hostname",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts' ] 14`] = `
{
  "href": "fake+http://url-fake-hostname/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 1`] = `"http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "http://zh-tw/zh-TW/scripts",
  "origin": "http://zh-tw",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "http://zh-tw/zh-TW/scripts",
  "origin": "http://zh-tw",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 4`] = `
{
  "protocol": "http:",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 7`] = `
{
  "pathname": "/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 9`] = `
{
  "host": "zh-tw",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 10`] = `
{
  "port": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 11`] = `
{
  "hostname": "zh-tw",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'http://zh-TW' ] 14`] = `
{
  "href": "http://zh-tw/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 1`] = `"fake+http://zh-tw/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "zh-tw",
  "hostname": "zh-tw",
  "href": "fake+http://zh-tw/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "zh-tw/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "zh-tw/zh-TW/scripts",
  "port": "",
  "protocol": "",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 4`] = `
{
  "protocol": "fake+http:",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 7`] = `
{
  "pathname": "/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 9`] = `
{
  "host": "zh-tw",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 10`] = `
{
  "port": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 11`] = `
{
  "hostname": "zh-tw",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW' ] 14`] = `
{
  "href": "fake+http://zh-tw/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 1`] = `"fake+http://zh-tw:8080/zh-TW/scripts"`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 2`] = `
{
  "auth": "",
  "hash": "",
  "host": "zh-tw:8080",
  "hostname": "zh-tw",
  "href": "fake+http://zh-tw:8080/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "/zh-TW/scripts",
  "port": "8080",
  "protocol": "fake+http:",
  "query": "",
  "slashes": true,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 3`] = `
{
  "auth": "",
  "hash": "",
  "host": "",
  "hostname": "",
  "href": "zh-tw:8080/zh-TW/scripts",
  "origin": "null",
  "password": "",
  "pathname": "8080/zh-TW/scripts",
  "port": "",
  "protocol": "zh-tw:",
  "query": "",
  "slashes": false,
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 4`] = `
{
  "protocol": "fake+http:",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 5`] = `
{
  "hash": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 6`] = `
{
  "query": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 7`] = `
{
  "pathname": "/zh-TW/scripts",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 8`] = `
{
  "auth": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 9`] = `
{
  "host": "zh-tw:8080",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 10`] = `
{
  "port": "8080",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 11`] = `
{
  "hostname": "zh-tw",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 12`] = `
{
  "password": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 13`] = `
{
  "username": "",
}
`;

exports[`suite [ 'zh-TW/scripts', 'zh-TW:8080' ] 14`] = `
{
  "href": "fake+http://zh-tw:8080/zh-TW/scripts",
}
`;
